--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "axios": "^0.21.1",
+    "ra-data-json-server": "^3.13.5",
+    "ra-data-simple-rest": "^3.13.4",
     "react": "^17.0.1",
+    "react-admin": "^3.13.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
